# rust-sandbox

doc/: wasm.md
rust-python/examples/src/: freeze.py  freeze.rs  hello_embed.rs  main.rs  text-detector.py
rust-python/hello_world/: Cargo.toml
rust-python/hello_world/src/: main.rs
wasm/hello-wasm/: Cargo.toml
wasm/hello-wasm-site/: index.js
