[package]
name = "hello_world"
version = "0.1.0"
authors = ["ismail codar <icodar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", version = "*" }